Fixed the overflow issue for the our client component

--- a/components/OurClients/ourclient.module.scss
+++ b/components/OurClients/ourclient.module.scss
@@ -27,6 +27,7 @@
             max-width: 100%;
             border-radius: 16px;
             box-shadow: 0px 0px 24px 0px #00000014;
+            padding-inline: 0.75rem;
         }
 
         &__slide {
@@ -43,7 +44,6 @@
             align-items: center;
             flex-direction: column;
             position: relative;
-            padding-inline: 1rem;
 
             &::before {
                 position: absolute;
@@ -113,13 +113,13 @@
         }
 
         // Responsive
-
         @include smallDesktop {
             &__title {
                 font-size: $fs-5xl - 8;
                 padding-bottom: 30px;
             }
         }
+
         @include tablet {
             &__cont {
                 margin-block: 70px;
